examples/test/testpolicy4069.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4069
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key0: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value46
          key34: value42
          key36: value22
      podSelector:
        matchLabels:
          key18: value41
          key20: value17
          key8: value0
